# hash-audit-tool

./: README.md  pyproject.toml
hash_audit/: __init__.py  benchmark.py  cache.py  cli.py  hashing.py  reporting.py
tests/: test_hashing.py
